syntax = "proto3";
package api.buckets.pb;

message Metadata {
    string cid = 1;
    map<string, PathAccessRole> roles = 2;
    int64 created_at = 3;
    int64 updated_at = 4;
}

message Root {
    string key = 1;
    string name = 2;
    string path = 3;
    int64 created_at = 4;
    int64 updated_at = 5;
    string thread = 6;
    string owner = 7;
    int32 version = 8;
    map<string, Metadata> metadata = 9;
}

message ListRequest {}

message ListResponse {
    repeated Root roots = 1;
}

message CreateRequest {
    string name = 1;
    string bootstrap_cid = 2;
    bool private = 3;
}

message CreateResponse {
    Root root = 1;
    LinksResponse links = 2;
    bytes seed = 3;
    string seed_cid = 4;
}

message RootRequest {
    string key = 1;
}

message RootResponse {
    Root root = 1;
}

message LinksRequest {
    string key = 1;
}

message LinksResponse {
    string url = 1;
    string www = 2;
    string ipns = 3;
}

message ListPathRequest {
    string key = 1;
    string path = 2;
}

message ListPathResponse {
    PathItem item = 1;
    Root root = 2;
}

message PathItem {
    string cid = 1;
    string name = 2;
    string path = 3;
    int64 size = 4;
    bool is_dir = 5;
    repeated PathItem items = 6;
    int32 items_count = 7;
}

message ListIpfsPathRequest {
    string path = 1;
}

message ListIpfsPathResponse {
    PathItem item = 1;
}

message PushPathRequest {
    oneof payload {
        Header header = 1;
        bytes chunk = 2;
    }

    message Header {
        string key = 1;
        string path = 2;
        string root = 3;
    }
}

message PushPathResponse {
    oneof payload {
        Event event = 1;
        string error = 2;
    }

    message Event {
        string name = 1;
        string path = 2;
        int64 bytes = 3;
        string size = 4;
        Root root = 5;
    }
}

message PullPathRequest {
    string key = 1;
    string path = 2;
}

message PullPathResponse {
    bytes chunk = 1;
}


message PullIpfsPathRequest {
    string path = 1;
}

message PullIpfsPathResponse {
    bytes chunk = 1;
}

message SetPathRequest {
    string key = 1;
    string path = 2;
    string cid = 3;
}

message SetPathResponse {}

message RemoveRequest {
    string key = 1;
}

message RemoveResponse {}

message RemovePathRequest {
    string key = 1;
    string path = 2;
    string root = 3;
}

message RemovePathResponse {
    Root root = 1;
}

enum PathAccessRole {
    PATH_ACCESS_ROLE_UNSPECIFIED = 0;
    PATH_ACCESS_ROLE_READER = 1;
    PATH_ACCESS_ROLE_WRITER = 2;
    PATH_ACCESS_ROLE_ADMIN = 3;
}

message GetPathAccessRolesRequest {
    string key = 1;
    string path = 2;
}

message GetPathAccessRolesResponse {
    map<string, PathAccessRole> roles = 1;
}

message EditPathAccessRolesRequest {
    string key = 1;
    string path = 2;
    map<string, PathAccessRole> roles = 3;
}

message EditPathAccessRolesResponse {}

message ArchiveRequest {
    string key = 1;
}

message ArchiveResponse {}

message ArchiveStatusRequest {
    string key = 1;
}

message ArchiveStatusResponse {
    string key = 1;
    Status status = 2;
    string failed_msg = 3;

    enum Status {
        STATUS_UNSPECIFIED = 0;
        STATUS_EXECUTING = 1;
        STATUS_FAILED = 2;
        STATUS_DONE = 3;
        STATUS_CANCELED = 4;
    }
}

message ArchiveInfoRequest {
    string key = 1;
}

message ArchiveInfoResponse {
    string key = 1;
    Archive archive = 2;

    message Archive {
        string cid = 1;
        repeated Deal deals = 2;

        message Deal {
            string proposal_cid = 1;
            string miner = 2;
        }
    }
}

message ArchiveWatchRequest {
    string key = 1;
}

message ArchiveWatchResponse {
    string msg = 1;
}

service APIService {
    rpc List(ListRequest) returns (ListResponse) {}
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Root(RootRequest) returns (RootResponse) {}
    rpc Links(LinksRequest) returns (LinksResponse) {}
    rpc ListPath(ListPathRequest) returns (ListPathResponse) {}
    rpc ListIpfsPath(ListIpfsPathRequest) returns (ListIpfsPathResponse) {}
    rpc PushPath(stream PushPathRequest) returns (stream PushPathResponse) {}
    rpc PullPath(PullPathRequest) returns (stream PullPathResponse) {}
    rpc PullIpfsPath(PullIpfsPathRequest) returns (stream PullIpfsPathResponse) {}
    rpc SetPath(SetPathRequest) returns (SetPathResponse) {}
    rpc Remove(RemoveRequest) returns (RemoveResponse) {}
    rpc RemovePath(RemovePathRequest) returns (RemovePathResponse) {}
    rpc GetPathAccessRoles(GetPathAccessRolesRequest) returns (GetPathAccessRolesResponse) {}
    rpc EditPathAccessRoles(EditPathAccessRolesRequest) returns (EditPathAccessRolesResponse) {}
    
    // Archive
    rpc Archive(ArchiveRequest) returns (ArchiveResponse) {}
    rpc ArchiveStatus(ArchiveStatusRequest) returns (ArchiveStatusResponse) {}
    rpc ArchiveInfo(ArchiveInfoRequest) returns (ArchiveInfoResponse) {}
    rpc ArchiveWatch(ArchiveWatchRequest) returns (stream ArchiveWatchResponse) {}
}
